--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,3 +1,4 @@
+play.http.secret.key="vV:lTtY]pL=v0gsfsAm<>e5qG0Ohp6iGwoisCV5@Z8127x=bqZ4Mp7NU7pBk=dSN"
 # https://www.playframework.com/documentation/latest/Configuration
 
 play.filters.disabled += "play.filters.headers.SecurityHeadersFilter"
