allow all hosts

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -2,3 +2,8 @@ play.http.secret.key="vV:lTtY]pL=v0gsfsAm<>e5qG0Ohp6iGwoisCV5@Z8127x=bqZ4Mp7NU7p
 # https://www.playframework.com/documentation/latest/Configuration
 
 play.filters.disabled += "play.filters.headers.SecurityHeadersFilter"
+
+play.filters.hosts {
+  # Allow requests to example.com, its subdomains, and localhost:9000.
+  allowed = ["."]
+}
